// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProceedingsAction renders proceedings 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    items={
      Immutable.List [
        Object {
          "key": "/literature/12345",
          "label": <span>
            <LinkWithTargetBlank
              as="a"
              href="/literature/12345"
            >
              <span>
                Proceedings 
                1
              </span>
            </LinkWithTargetBlank>
          </span>,
        },
        Object {
          "key": "/literature/54321",
          "label": <span>
            <LinkWithTargetBlank
              as="a"
              href="/literature/54321"
            >
              <JournalInfo
                info={
                  Immutable.Map {
                    "journal_title": "Journal 1",
                  }
                }
              />
            </LinkWithTargetBlank>
          </span>,
        },
      ]
    }
    title={
      <Button>
        <IconText
          icon={<ForwardRef(BookOutlined) />}
          text="proceedings"
        />
      </Button>
    }
  />
</UserActionWrapper>
`;

exports[`ProceedingsAction renders single item 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="/literature/12345"
  >
    <IconText
      icon={<ForwardRef(BookOutlined) />}
      text="proceedings"
    />
  </LinkWithTargetBlank>
</UserActionWrapper>
`;
